# ascent

./: COPYING  COPYING.rtf  Makefile.am  NEWS  README  beer.txt  configure.ac  make_precompiled_header.sh  reconf
branches/2_4_ptr/: make_precompiled_header.sh
branches/3_8_stable/: extract_svn_revision.h
branches/patches/: CHANGELOG
branches/untested-2/: configure.ac
branches/working/: configure.ac  extract_svn_revision.h
extras/: AUTH_RECONNECT_CHALLENGE analysis.txt  druid_todo.txt  general_todo.txt  hunter_todo.txt  mage_todo.txt  paladin_todo.txt  priest_todo.txt  shaman_todo.txt  warlock_todo.txt  warrior_todo.txt
extras/Game Monkey/: Alar.gm  Black_temple_attunement.gm  Blackwing_lair_attunement.gm  DoomwalkerScript.gm  FreeFromTheHold.gm  Game_Monkey.txt  HH_MARSHAL.gm  HomewardBound.gm  IF_BREAD_SELLER.gm  Karazhan_attunement.gm  Maraudon_Celebras.gm  MerchanarScript.gm  Molten_core_attunement.gm  Mount_hyjal_attunement.gm  Naxxramas_attunement.gm  Onyxias_lair_attunement.gm  TheEscape.gm  blacktemple.gm  northshireQuests.gm
extras/Untested patches/: 976_Zack.patch  Throw_supalosa.patch  aura134_shady.patch  conujured_unique_items.patch  fishing_thenecromancer.patch  gift_of_naru_shady.patch  healing_amount_shady.patch  imp_charge_rage_p1_icemaster.patch  imp_charge_rage_p2_icemaster.patch  rem_req_items_jacekc.patch  righteus_furry_icamaster.patch  ruins_arena_shadowhunter.patch  strike_BC_rewrite_shady.patch  warlock_andy.patch
extras/collision_map_extractor/: System.cpp  ad.vcproj  adt.cpp  adt.h  model.cpp
extras/example_scripts/: Alar.gm  Band Scripta.gm  FreeFromTheHold.gm  Gruul.gm  HH_MARSHAL.gm  HomewardBound.gm  IF_BREAD_SELLER.gm  IF_FRUIT_SELLER.gm  KazzakScript.gm  LazyPeons.gm  MerchanarScript.gm  MoltenCore_Attunement_Check.gm  blacktemple.gm  delayedQuestFinishEvent.gm  summonNegolash.gm  testAreaTriggerScript.gm  testInstanceAttunementScript.gm  theAttack.gm  theDefiasTraitor.gm
extras/map_extractor/: AD.ncb  System.cpp  ad.vcproj  adt.cpp
sql/: clean_db.rar  new_trainer_sruct.sql  rev. 285 reputation_cre&fact_onkill.sql  worldmap_info.sql
src/: Makefile.am  antrix.conf  ascent.conf  logonserver.conf  realms.conf
src/antrix/: CConsole.cpp  CConsole.h  Main.cpp  MainServerDefines.h  Makefile.am  Master.cpp  Master.h
src/ascent/: CConsole.cpp  CConsole.h  Main.cpp  MainServerDefines.h  Master.cpp  Master.h
src/ascent-logonserver/: Main.cpp
src/ascent-world/: AIInterface.cpp  BattlegroundMgr.cpp  CConsole.cpp  ItemHandler.cpp  ItemInterface.cpp  Master.cpp  Object.cpp  PetHandler.cpp  Player.cpp  Player.h  ScriptMgr.cpp  ScriptSetup.h  Spell.cpp  Spell.h  SpellAuras.cpp  SpellEffects.cpp  SpellHandler.cpp  Unit.cpp  Unit.h  WarsongGulch.cpp  World.cpp  World.h  faction.cpp
src/game/: AIInterface.cpp  AIInterface.h  AddonMgr.cpp  AddonMgr.h  AlteracValley.cpp  AlteracValley.h  ArathiBasin.cpp  ArathiBasin.h  AreaTrigger.cpp  AreaTrigger.h  ArenaTeam.cpp  ArenaTeam.h  Arenas.cpp  Arenas.h  AuctionHouse.cpp  AuctionHouse.h  AuctionMgr.cpp  AuctionMgr.h  BattlegroundCommands.cpp  BattlegroundHandler.cpp  BattlegroundMgr.cpp  BattlegroundMgr.h  CThreads.cpp  CThreads.h  CellHandler.h  Channel.cpp  Chat.cpp  (+147 more)
src/scripts/src/InstanceScripts/: GuardAI.cpp  Instance_Arcatraz.cpp  Instance_AuchenaiCrypts.cpp  Instance_BlackwingLair.cpp  Instance_BloodFurnace.cpp  Instance_Botanica.cpp  Instance_HellfireRamparts.cpp  Instance_ManaTombs.cpp  Instance_MoltenCore.cpp  Instance_Naxxramas.cpp  Instance_Scholomance.cpp  Instance_SethekkHalls.cpp  Instance_ShadowLabyrinth.cpp  Instance_SteamVault.cpp  Instance_SteamVaults.cpp  Instance_TheEye.cpp  Instance_TheMechanar.cpp  Instance_TheShatteredHalls.cpp  Instance_TheSlavePens.cpp  Instance_TheSteamvault.cpp  Instance_TheUnderbog.cpp  Instance_ZulGurub.cpp  Makefile.am  OnyxiaAI.cpp  Raid_BlackTemple.cpp  Raid_BlackwingLair.cpp  Raid_CoT_BattleOfMountHyjal.cpp  Raid_GrullsLair.cpp  Raid_GruulsLair.cpp  Raid_MoltenCore.cpp  Raid_Naxxramas.cpp  Raid_OnyxiasLair.cpp  Raid_TheEye.cpp  Raid_ZulGurub.cpp  Setup.cpp  Setup.h
src/shared/: AuthCodes.h  ByteBuffer.h  CallBack.cpp  CallBack.h  Common.h  CrashHandler.cpp  CrashHandler.h  Errors.h  FastQueue.h  LocationVector.h  Log.cpp  Log.h  Makefile.am  MemoryLeaks.cpp  MemoryLeaks.h  MersenneTwister.cpp  MersenneTwister.h  NGLog.h  New-Bytebuffer.h  PreallocatedQueue.h  Singleton.h  SmartPointer.h  SocketEngine.h  StackBuffer.h  Storage.h  TextLogger.cpp  TextLogger.h  Timer.h  Util.cpp  Util.h  WoWGuid.h  WorldPacket.h  antrix_getopt.cpp  antrix_getopt.h  ascent_getopt.cpp  ascent_getopt.h  svn_revision.h
src/shared/Auth/: BigNumber.cpp  BigNumber.h  Sha1.cpp  Sha1.h  WowCrypt.cpp  WowCrypt.h
src/shared/Config/: Config.cpp  Config.h  ConfigEnv.h
src/shared/Config/dotconfpp/: dotconfpp.cpp  dotconfpp.h  mempool.cpp  mempool.h
src/shared/Database/: DBC.cpp  DBC.h  DBCStores.cpp  DBCStores.h  DataStore.h  Database.cpp  Database.h  DatabaseEnv.h  Field.h  dbcfile.cpp  dbcfile.h
src/shared/Database/impl/: MySQLDatabase.cpp  MySQLDatabase.h  PostgreDatabase.cpp  PostgreDatabase.h
src/shared/Network/: BaseBuffer.h  BaseSocket.h  ListenSocket.h  ListenSocketFreeBSD.h  ListenSocketLinux.h  ListenSocketWin32.h  Network.h  Socket.cpp  Socket.h  SocketDefines.h  SocketEngine.cpp  SocketEngine_Select.cpp  SocketEngine_Select.h  SocketEngine_epoll.cpp  SocketEngine_epoll.h  SocketEngine_iocp.cpp  SocketEngine_iocp.h  SocketEngine_kqueue.cpp  SocketEngine_poll.cpp  SocketEngine_poll.h  SocketEngine_select.cpp  SocketFreeBSD.cpp  SocketLinux.cpp  SocketMgrFreeBSD.cpp  SocketMgrFreeBSD.h  SocketMgrLinux.cpp  SocketMgrLinux.h  SocketMgrPoll.cpp  SocketMgrPoll.h  SocketMgrWin32.cpp  SocketMgrWin32.h  SocketOps.h  SocketOpsFreeBSD.cpp  SocketOpsLinux.cpp  SocketOpsPoll.cpp  SocketOpsSelect.cpp  SocketOpsWin32.cpp  SocketPoll.cpp  SocketWin32.cpp  StraightBuffer.h  (+2 more)
src/shared/Threading/: Condition.h  Guard.h  LockedQueue.h  Mutex.cpp  Mutex.h  Queue.h  RWLock.h  ThreadStarter.h  Threading.h
win/: antrixVC71.sln  antrixVC80.sln  ascentVC71.sln  ascentVC80.sln
(+470 files in other folders)
