INCLUDES += -I$(srcdir) -I$(srcdir)/../../../../dep/include -I$(srcdir)/../../../shared
INCLUDES += -I$(srcdir)/../../../script -I$(srcdir)/../../../../src -I$(srcdir)/../../../game
INCLUDES += -I$(srcdir)/../../../logonserver -I$(srcdir)/../../../../dep/src/gm

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libInstanceScripts.la

libInstanceScripts_la_SOURCES = Instance_Deadmines.cpp Instance_MoltenCore.cpp Instance_ShadowfangKeep.cpp \
Instance_BlackwingLair.cpp Instance_Botanica.cpp Instance_ZulGurub.cpp Instance_Naxxramas.cpp OnyxiaAI.cpp Instance_SteamVault.cpp \
Instance_AuchenaiCrypts.cpp Instance_SethekkHalls.cpp Instance_TheEye.cpp Instance_ManaTombs.cpp Instance_TheSlavePens.cpp Setup.cpp \
Instance_TheUnderbog.cpp