INCLUDES += -I$(srcdir) -I$(srcdir)/../../../../dep/include -I$(srcdir)/../../../shared
INCLUDES += -I$(srcdir)/../../../script -I$(srcdir)/../../../../src -I$(srcdir)/../../../game
INCLUDES += -I$(srcdir)/../../../logonserver -I$(srcdir)/../../../../dep/src/gm

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libInstanceScripts.la

libInstanceScripts_la_SOURCES = Raid_BlackwingLair.cpp Raid_CoT_BattleOfMountHyjal.cpp Raid_GruulsLair.cpp Raid_MoltenCore.cpp Raid_Naxxramas.cpp \
Raid_OnyxiasLair.cpp Raid_TheEye.cpp Raid_ZulGurub.cpp  \
Instance_AuchenaiCrypts.cpp Instance_BloodFurnace.cpp Instance_Botanica.cpp Instance_Deadmines.cpp Instance_ManaTombs.cpp Instance_Scholomance.cpp \
Instance_SethekkHalls.cpp Instance_ShadowfangKeep.cpp Instance_ShadowLabyrinth.cpp Instance_SteamVault.cpp Instance_TheSlavePens.cpp \
Instance_TheUnderbog.cpp \
Setup.cpp